service page corrections

--- a/service.html
+++ b/service.html
@@ -274,21 +274,22 @@
 
 		<!-- Image 11 -->
 		<div class="posters col-span-3 row-span-2 row-start-11 bg-gray-300">
-			<img src="/services-assets/integrated-asset.png" class="w-full h-full object-cover">
+			<img src="/services-assets/design_asset.jpg" class="w-full h-full object-cover">
 		</div>
 
 		<!-- Content 12 -->
 		<div
-			class="col-span-4 row-span-2 col-start-4 row-start-11 bg-[#ffd527] p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
-			<div class="text-right custom-width text-blue-700">
-				<h1 class="text-3xl md:text-4xl font-bold pb-2 animate-text">INTEGRATED MARKETING</h1>
+			class="col-span-4 row-span-2 col-start-4 row-start-11  bg-pink-500 p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
+			<div class="text-right custom-width">
+				<h1 class="text-3xl md:text-4xl font-bold pb-2 animate-text">Digital Marketing</h1>
 				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
-					360 MARKETING CAMPAIGNS, GUERRILLA MARKETING AND EXPERIENTIAL MARKETING, SPONSORSHIP AND
-					PARTNERSHIPS
+				
+						SOCIAL MEDIA STRATEGY AND MANAGEMENT, CONTENT CREATION - COPY, GRAPHICS AND VIDEO, INFLUENCER
+					MARKETING
 				</p>
 				<button
-					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-blue-700 text-blue uppercase bg-transparent tracking-[0.3em] text-sm"
-					onclick="openServiceModal('integrated-popup')">
+					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-white text-white uppercase bg-transparent tracking-[0.3em] text-sm"
+					onclick="openServiceModal('digital-marketing-popup')">
 					<!-- <img src="/services-assets/explore-button-blue.png" alt="Explore"
 						class="w-16 sm:w-20 md:w-24 animate-text"> -->
 					Explore
@@ -299,26 +300,25 @@
 
 		<!-- Content 13 -->
 		<div
-			class="col-span-4 row-span-2 row-start-13 bg-pink-500 p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
-			<div class="text-left custom-width">
-				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2 animate-text uppercase">Digital
-					<br />Marketing
+			class="col-span-4 row-span-2 row-start-13 bg-[#ffd527] p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
+			<div class="text-left custom-width text-blue-700">
+				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2 animate-text uppercase">INTEGRATED MARKETING
 				</h1>
 				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
-					SOCIAL MEDIA STRATEGY AND MANAGEMENT, CONTENT CREATION - COPY, GRAPHICS AND VIDEO, INFLUENCER
-					MARKETING
+					360 MARKETING CAMPAIGNS, GUERRILLA MARKETING AND EXPERIENTIAL MARKETING, SPONSORSHIP AND
+					PARTNERSHIPS
 				</p>
 				<button
-					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-white text-white uppercase bg-transparent tracking-[0.3em] text-sm"
-					onclick="openServiceModal('digital-marketing-popup')">
+					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border  border-blue-700 text-blue uppercase bg-transparent tracking-[0.3em] text-sm"
+					onclick="openServiceModal('integrated-popup')">
 					Explore
 				</button>
 			</div>
 		</div>
 
 		<!-- Image 12 -->
-		<div class="posters col-span-3 row-span-2 col-start-5 row-start-13 bg-pink-500 max-h-[356px]">
-			<img src="/services-assets/design_asset.jpg" class="w-full h-full object-cover">
+		<div class="posters col-span-3 row-span-2 col-start-5 row-start-13 bg-pink-500">
+			<img src="/services-assets/integrated-asset.png" class="w-full h-full object-cover">
 		</div>
 	</section>
 
@@ -823,49 +823,7 @@
 							Lorem Ipsum.
 						</p>
 					</div>
-				</div>
-				<div class="flex flex-col md:flex-row w-full mt-10">
-					<div class="md:w-[30%] w-full flex items-center justify-start md:justify-center p-4">
-						<img src="/services-assets/pop-assets/rgb.png" alt="service asset"
-							class="w-24 h-24 object-contain" />
-					</div>
-
-					<div class="md:w-[70%] w-full p-4 flex flex-col justify-center pr-0 md:pr-20">
-						<h2 class="uppercase text-4xl text-[#272cf7] mb-5">ui / ux design</h2>
-						<p class="text-sm text-gray-700">
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-							been
-							the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-							galley
-							of type and scrambled it to make a type specimen book. It has survived not only five
-							centuries,
-							but also the leap into electronic typesetting, remaining essentially unchanged. It was
-							popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-							passages,
-							and more recently with desktop publishing software like Aldus PageMaker including versions
-							of
-							Lorem Ipsum.
-						</p>
-					</div>
-				</div>
-				<div class="flex flex-col md:flex-row w-full mt-10">
-					<div class="md:w-[30%] w-full flex items-center justify-start md:justify-center p-4">
-						<img src="/services-assets/pop-assets/wireframe.png" alt="service asset"
-							class="w-24 h-24 object-contain" />
-					</div>
-
-					<div class="md:w-[70%] w-full p-4 flex flex-col justify-center pr-0 md:pr-20">
-						<h2 class="uppercase text-4xl text-[#272cf7] mb-5">prototyping & wireframing</h2>
-						<p class="text-sm text-gray-700">
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-							been
-							the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-							galley
-							of type and scrambled it to make a type specimen book. It has survived not only five
-							centuries.
-						</p>
-					</div>
-				</div>
+				</div>  
 				<div class="flex flex-col md:flex-row w-full mt-10 mb-10">
 					<div class="md:w-[30%] w-full flex items-center justify-start md:justify-center p-4">
 						<img src="/services-assets/pop-assets/animation.png" alt="service asset"
