--- a/service.html
+++ b/service.html
@@ -274,7 +274,7 @@
 
 		<!-- Image 11 -->
 		<div class="posters col-span-3 row-span-2 row-start-11 bg-gray-300">
-			<img src="/services-assets/design_asset.jpg" class="w-full h-full object-cover">
+			<img src="/services-assets/design_asset.png" class="w-full h-full object-cover">
 		</div>
 
 		<!-- Content 12 -->
@@ -942,7 +942,7 @@
 
 				<div class="flex flex-col md:flex-row w-full mt-10 mb-10">
 					<div class="md:w-[30%] w-full flex items-center justify-start md:justify-center p-4">
-						<img src="/services-assets/pop-assets/sequence.png" alt="service asset"
+						<img src="/services-assets/pop-assets/2d&3d.png" alt="service asset"
 							class="w-24 h-24 object-contain" />
 					</div>
 
