--- a/movie-poster.html
+++ b/movie-poster.html
@@ -55,11 +55,11 @@
         .flip-card {
             width: 100%;
             max-width: 400px;
-            /* adjust max width as needed */
-            height: auto;
             aspect-ratio: 2 / 3;
-            /* maintains proportion (e.g., 400x600) */
-            margin: auto;
+            margin: 5px !important;
+            box-sizing: border-box;
+            display: inline-block;
+            vertical-align: top;
         }
 
         @media (max-width: 768px) {
@@ -72,6 +72,12 @@
         @media (min-width: 1024px) {
             .flip-card {
                 max-width: 420px;
+            }
+        }
+
+        @media (min-width: 850px) and (max-width: 1023.5px) {
+            .flip-card {
+                max-width: 90vw;
             }
         }
 
