ibangle section issue fix

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 
 
     <!-- iBangle Section -->
-    <section class="relative  sm:h-[100dvh] bg-black sm:min-h-screen flex flex-col justify-center px-8 pt-10">
+    <section class="relative overflow-hidden sm:h-[100dvh] bg-black sm:min-h-screen flex flex-col justify-center px-8 pt-10">
         <div
             class="max-w-6xl w-full mx-auto flex flex-col lg:flex-row items-center justify-between h-full text-white relative">
 
@@ -534,7 +534,7 @@
             <div
                 class="w-full lg:w-[50%] sm:h-auto flex justify-center lg:justify-end mt-8 lg:mt-0 lg:absolute lg:bottom-0 lg:right-0">
                 <img src="/MIW_Website_Assets/ibangle-asset.png" alt="iBangle Image"
-                    class="w-[80%] lg:w-full max-w-md lg:max-w-lg object-contain sm:object-cover sm:h-[40rem] md:h-[35rem]">
+                    class="w-[80%] lg:w-full max-w-md lg:max-w-lg object-contain sm:object-cover sm:h-[40rem] md:h-[55rem]">
             </div>
 
         </div>
