--- a/service.html
+++ b/service.html
@@ -356,23 +356,22 @@
 							</h3>
 							<ul class="space-y-1">
 								<li class="cursor-pointer">
-									<a class="hover:text-yellow-400" href="/movie-poster.html">Film Posters</a>
+									<a class="hover:text-yellow-400" href="/work.html?tab=flim">Film Posters</a>
 								</li>
 								<li class="cursor-pointer">
-									<a class="hover:text-yellow-400" href="/events.html">Events</a>
+									<a class="hover:text-yellow-400" href="/work.html?tab=events">Events</a>
 								</li>
 								<li class="cursor-pointer">
-									<a class="hover:text-yellow-400" href="/title-animations.html">Title Animations</a>
-								</li>
-
-								<li class="cursor-pointer">
-									<a class="hover:text-yellow-400" href="/branding.html">Branding</a>
+									<a class="hover:text-yellow-400" href="/work.html?tab=title">Title Animations</a>
 								</li>
 								<li class="cursor-pointer">
-									<a class="hover:text-yellow-400" href="/products.html">Products</a>
+									<a class="hover:text-yellow-400" href="/work.html?tab=branding">Branding</a>
 								</li>
 								<li class="cursor-pointer">
-									<a class="hover:text-yellow-400" href="/advertising.html">Advertising</a>
+									<a class="hover:text-yellow-400" href="/work.html?tab=products">Products</a>
+								</li>
+								<li class="cursor-pointer">
+									<a class="hover:text-yellow-400" href="work.html?tab=advertising">Advertising</a>
 								</li>
 
 							</ul>
