--- a/team.html
+++ b/team.html
@@ -423,26 +423,24 @@
                                 <a class="hover:text-pink-500" href="/work.html">WORK</a>
                             </h3>
                             <ul class="space-y-1">
-                                <li class="cursor-pointer">
-                                    <a class="hover:text-pink-500" href="/movie-poster.html">Film Posters</a>
+                                 <li class="cursor-pointer">
+                                    <a class="hover:text-pink-500" href="/work.html?tab=flim">Film Posters</a>
                                 </li>
                                 <li class="cursor-pointer">
-                                    <a class="hover:text-pink-500" href="/events.html">Events</a>
+                                    <a class="hover:text-pink-500" href="/work.html?tab=events">Events</a>
                                 </li>
                                 <li class="cursor-pointer">
-                                    <a class="hover:text-pink-500" href="/title-animations.html">Title Animations</a>
-                                </li>
-
-                                <li class="cursor-pointer">
-                                    <a class="hover:text-pink-500" href="/branding.html">Branding</a>
+                                    <a class="hover:text-pink-500" href="/work.html?tab=title">Title Animations</a>
                                 </li>
                                 <li class="cursor-pointer">
-                                    <a class="hover:text-pink-500" href="/products.html">Products</a>
+                                    <a class="hover:text-pink-500" href="/work.html?tab=branding">Branding</a>
                                 </li>
                                 <li class="cursor-pointer">
-                                    <a class="hover:text-pink-500" href="/advertising.html">Advertising</a>
+                                    <a class="hover:text-pink-500" href="/work.html?tab=products">Products</a>
                                 </li>
-
+                                <li class="cursor-pointer">
+                                    <a class="hover:text-pink-500" href="work.html?tab=advertising">Advertising</a>
+                                </li>
                             </ul>
                         </div>
                         <div class="w-full">
