--- a/work.html
+++ b/work.html
@@ -9,7 +9,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <style>
         html {
             scroll-behavior: smooth;
@@ -155,7 +154,7 @@
             text-align: right;
             font-size: 28px;
             line-height: 1.75rem;
-            font-weight: 500; 
+            font-weight: 500;
         }
     </style>
 </head>
@@ -244,38 +243,35 @@
 
     <!-- tabs -->
     <div class="mt-8 mb-8 px-4 py-3 flex justify-center">
-        <div id="custom-cursor"
-            class="hidden pointer-events-none fixed z-50 w-4 h-4 rounded-full bg-red-400 mix-blend-difference"></div>
 
         <div class="flex items-center space-x-4 overflow-x-auto whitespace-nowrap scroll-smooth hide-scrollbar">
-
             <!-- Static text -->
             <span class="flex items-center flex-shrink-0 font-semibold text-blue-600">
                 Work <span class="mx-2 w-12 border-t border-black"></span>
             </span>
 
             <!-- Tabs -->
-            <button class="tab-item custom-underline font-semibold text-black flex-shrink-0 cursor-none pb-0"
+            <button class="tab-item custom-underline font-semibold text-black flex-shrink-0 cursor-pointer pb-0"
                 data-tab="flim">
                 Flim Posters
             </button>
-            <button class="tab-item custom-underline text-gray-400 flex-shrink-0 cursor-none ml-2 pb-0"
+            <button class="tab-item custom-underline text-gray-400 flex-shrink-0 cursor-pointer ml-2 pb-0"
                 data-tab="branding">
                 Branding
             </button>
-            <button class="tab-item custom-underline text-gray-400 flex-shrink-0 cursor-none ml-2 pb-0"
+            <button class="tab-item custom-underline text-gray-400 flex-shrink-0 cursor-pointer ml-2 pb-0"
                 data-tab="title">
                 Title Animation
             </button>
-            <button class="tab-item custom-underline text-gray-400 flex-shrink-0 cursor-none ml-2 pb-0"
+            <button class="tab-item custom-underline text-gray-400 flex-shrink-0 cursor-pointer ml-2 pb-0"
                 data-tab="advertising">
                 Advertising
             </button>
-            <button class="tab-item custom-underline text-gray-400 flex-shrink-0 cursor-none ml-2 pb-0"
+            <button class="tab-item custom-underline text-gray-400 flex-shrink-0 cursor-pointer ml-2 pb-0"
                 data-tab="products">
                 Products
             </button>
-            <button class="tab-item custom-underline text-gray-400 flex-shrink-0 cursor-none ml-2 pb-0"
+            <button class="tab-item custom-underline text-gray-400 flex-shrink-0 cursor-pointer ml-2 pb-0"
                 data-tab="events">
                 Events
             </button>
@@ -636,23 +632,22 @@
                             </h3>
                             <ul class="space-y-1">
                                 <li class="cursor-pointer">
-                                    <a class="hover:text-pink-500" href="/movie-poster.html">Film Posters</a>
+                                    <a class="hover:text-pink-500" href="/work.html?tab=flim">Film Posters</a>
                                 </li>
                                 <li class="cursor-pointer">
-                                    <a class="hover:text-pink-500" href="/events.html">Events</a>
+                                    <a class="hover:text-pink-500" href="/work.html?tab=events">Events</a>
                                 </li>
                                 <li class="cursor-pointer">
-                                    <a class="hover:text-pink-500" href="/title-animations.html">Title Animations</a>
-                                </li>
-
-                                <li class="cursor-pointer">
-                                    <a class="hover:text-pink-500" href="/branding.html">Branding</a>
+                                    <a class="hover:text-pink-500" href="/work.html?tab=title">Title Animations</a>
                                 </li>
                                 <li class="cursor-pointer">
-                                    <a class="hover:text-pink-500" href="/products.html">Products</a>
+                                    <a class="hover:text-pink-500" href="/work.html?tab=branding">Branding</a>
                                 </li>
                                 <li class="cursor-pointer">
-                                    <a class="hover:text-pink-500" href="/advertising.html">Advertising</a>
+                                    <a class="hover:text-pink-500" href="/work.html?tab=products">Products</a>
+                                </li>
+                                <li class="cursor-pointer">
+                                    <a class="hover:text-pink-500" href="work.html?tab=advertising">Advertising</a>
                                 </li>
 
                             </ul>
@@ -739,7 +734,8 @@
 
 
     <div id="fullscreen-image-modal"
-        class="hidden fixed inset-0 bg-black bg-opacity-90 flex items-center justify-center z-[60]">
+        class="hidden fixed inset-0 bg-black bg-opacity-90 flex items-center justify-center z-[60]"
+        onclick="handleOutsideClick(event)">
         <div class="relative">
             <button onclick="closeFullscreenImage()"
                 class="hidden sm:flex absolute -top-6 -right-4 sm:-top-6 sm:-right-12 w-10 h-10 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-700 rounded-full text-xl shadow-lg z-50">
@@ -982,23 +978,6 @@
 
 
     <script>
-        const cursor = document.getElementById("custom-cursor");
-        const tabItems = document.querySelectorAll(".tab-item");
-
-        document.addEventListener("mousemove", (e) => {
-            cursor.style.left = `${e.clientX}px`;
-            cursor.style.top = `${e.clientY}px`;
-        });
-
-        tabItems.forEach(item => {
-            item.addEventListener("mouseenter", () => {
-                cursor.classList.remove("hidden");
-            });
-
-            item.addEventListener("mouseleave", () => {
-                cursor.classList.add("hidden");
-            });
-        });
 
         function openFullscreenImage(src) {
             const modal = document.getElementById('fullscreen-image-modal');
@@ -1014,7 +993,77 @@
             document.getElementById('fullscreen-img').src = '';
             document.body.classList.remove("overflow-hidden");
         }
+        function handleOutsideClick(event) {
+            const img = document.getElementById('fullscreen-img');
+
+            if (window.innerWidth < 640 && !img.contains(event.target)) {
+                closeFullscreenImage();
+            }
+        }
     </script>
+
+
+    <script>
+        window.addEventListener('DOMContentLoaded', () => {
+            const urlParams = new URLSearchParams(window.location.search);
+            const tabToActivate = urlParams.get('tab');
+            const sections = document.querySelectorAll('.tab-section');
+            const tabButtons = document.querySelectorAll('.tab-item');
+
+            function activateTab(tabName, scroll = true) {
+                // Show/hide sections
+                sections.forEach(section => {
+                    section.style.display = section.id === tabName ? 'block' : 'none';
+                });
+
+                // Toggle tab button styles
+                tabButtons.forEach(button => {
+                    if (button.dataset.tab === tabName) {
+                        button.classList.add('font-semibold', 'text-black', 'border-b-2', 'border-black');
+                        button.classList.remove('text-gray-400');
+                    } else {
+                        button.classList.remove('font-semibold', 'text-black', 'border-b-2', 'border-black');
+                        button.classList.add('text-gray-400');
+                    }
+                });
+
+                // Scroll to section
+                const target = document.getElementById(tabName);
+                if (target && scroll) {
+                    setTimeout(() => {
+                        const offset = 130; // Adjust this if needed
+                        const topPos = target.getBoundingClientRect().top + window.scrollY - offset;
+
+                        window.scrollTo({
+                            top: topPos,
+                            behavior: 'smooth'
+                        });
+                    }, 100);
+                }
+            }
+
+            // 1. If coming from link with ?tab=... param
+            if (tabToActivate) {
+                activateTab(tabToActivate);
+            } else {
+                // Optional: activate default tab
+                const defaultTab = tabButtons[0]?.dataset.tab;
+                if (defaultTab) activateTab(defaultTab, false);
+            }
+
+            // 2. Handle local tab switching WITHOUT query param
+            tabButtons.forEach(button => {
+                button.addEventListener('click', (e) => {
+                    e.preventDefault(); // Prevent link behavior if any
+                    const selectedTab = button.dataset.tab;
+                    activateTab(selectedTab);
+                    // DO NOT update URL — no history.replaceState
+                });
+            });
+        });
+    </script>
+
+
 </body>
 
 </html>
