fixed responsive issues: pushed by maharajan

--- a/index.html
+++ b/index.html
@@ -262,6 +262,22 @@
             }
         }
 
+         @media (min-width: 768px) and (max-width: 1023.5px) {
+            .testimonial-image {
+                max-height: 60dvh !important;
+                margin-bottom: -10%;
+                
+            }
+
+            .testimonial-image-atlee {
+                max-height: 60dvh !important;
+            }
+            .i-bangle {
+                max-height: 60dvh !important;
+            }
+
+        }
+
 
         /* Mobile and tablet view (max-width: 1023px) */
         @media (max-width: 1023px) {
@@ -596,7 +612,7 @@
             <div
                 class="w-full lg:w-[50%] sm:h-auto flex justify-center lg:justify-end mt-8 lg:mt-0 lg:absolute lg:bottom-0 lg:right-0">
                 <img src="/MIW_Website_Assets/ibangle-asset.png" alt="iBangle Image"
-                    class="w-[80%] lg:w-full max-w-md lg:max-w-lg object-contain sm:object-cover sm:h-[40rem] md:h-[55rem]">
+                    class="w-[80%] lg:w-full max-w-md lg:max-w-lg object-contain sm:object-cover sm:h-[40rem] md:h-[55rem] i-bangle">
             </div>
 
         </div>
