--- a/service.html
+++ b/service.html
@@ -160,8 +160,8 @@
 		<div
 			class="col-span-4 row-span-2 bg-green-500 px-4 md:px-6 lg:px-8 text-white flex items-center justify-center">
 			<div class="text-left custom-width">
-				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2 animate-text">BRANDING</h1>
-				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
+				<h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold leading-relaxed pb-2 animate-text">BRANDING</h1>
+				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text">
 					LOGO DESIGN, BRAND POSITIONING, BRAND STRATEGY, NAMING & TAGLINE DEVELOPMENT, REBRANDING
 				</p>
 				<button
@@ -188,8 +188,8 @@
 		<div id="ads-section-right"
 			class="col-span-4 row-span-2 col-start-4 row-start-3 bg-white p-4 md:p-6 lg:p-8 text-blue-700 flex items-center justify-center">
 			<div class="text-right custom-width">
-				<h1 class="text-right text-3xl md:text-4xl font-bold leading-relaxed pb-2 animate-text">ADVERTISING</h1>
-				<p class="text-right text-xs sm:text-sm md:text-base leading-loose animate-text">
+				<h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold leading-relaxed pb-2 animate-text">ADVERTISING</h1>
+				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text">
 					PRINT, DIGITAL, FILM, PHOTOGRAPHY AND ART DIRECTION, OUT-OF-HOME ADVERTISING.
 				</p>
 				<button
@@ -206,8 +206,8 @@
 		<div
 			class="col-span-4 row-span-2 row-start-5 bg-pink-500 p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
 			<div class="text-left custom-width">
-				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2 animate-text">DESIGNING</h1>
-				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
+				<h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold leading-relaxed pb-2 animate-text">DESIGNING</h1>
+				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text">
 					GRAPHIC DESIGN, PACKAGING DESIGN, WEBSITE DESIGN & DEVELOPMENT,
 					MOTION GRAPHICS & ANIMATION
 				</p>
@@ -235,8 +235,8 @@
 		<div
 			class="col-span-4 row-span-2 col-start-4 row-start-7 bg-black p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
 			<div class="text-right custom-width">
-				<h1 class="text-3xl md:text-4xl font-bold pb-2 animate-text">FILM PRODUCTION</h1>
-				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
+				<h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold pb-2 animate-text">FILM PRODUCTION</h1>
+				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text">
 					TITLE ANIMATION, STOP MOTION ANIMATION, MOVIE TITLE SEQUENCE, 2D ANIMATION & 3D ANIMATION
 				</p>
 				<button
@@ -253,8 +253,8 @@
 		<div
 			class="col-span-4 row-span-2 row-start-9 bg-blue-700 p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
 			<div class="text-left custom-width">
-				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2 animate-text">UI / UX</h1>
-				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
+				<h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold leading-relaxed pb-2 animate-text">UI / UX</h1>
+				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text">
 					UI DESIGN, INTERACTION DESIGN, PROTOTYPING AND WIREFRAMING, UX DESIGN
 				</p>
 				<button
@@ -281,8 +281,8 @@
 		<div
 			class="col-span-4 row-span-2 col-start-4 row-start-11  bg-pink-500 p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
 			<div class="text-right custom-width">
-				<h1 class="text-3xl md:text-4xl font-bold pb-2 animate-text">Digital Marketing</h1>
-				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
+				<h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold pb-2 animate-text">Digital Marketing</h1>
+				<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-loose animate-text">
 				
 						SOCIAL MEDIA STRATEGY AND MANAGEMENT, CONTENT CREATION - COPY, GRAPHICS AND VIDEO, INFLUENCER
 					MARKETING
@@ -299,22 +299,23 @@
 
 
 		<!-- Content 13 -->
-		<div
-			class="col-span-4 row-span-2 row-start-13 bg-[#ffd527] p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
-			<div class="text-left custom-width text-blue-700">
-				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2 animate-text uppercase">INTEGRATED MARKETING
-				</h1>
-				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
-					360 MARKETING CAMPAIGNS, GUERRILLA MARKETING AND EXPERIENTIAL MARKETING, SPONSORSHIP AND
-					PARTNERSHIPS
-				</p>
-				<button
-					class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border  border-blue-700 text-blue uppercase bg-transparent tracking-[0.3em] text-sm"
-					onclick="openServiceModal('integrated-popup')">
-					Explore
-				</button>
-			</div>
-		</div>
+<div
+	class="col-span-4 row-span-2 row-start-13 bg-[#ffd527] p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
+	<div class="text-left custom-width text-blue-700">
+		<h1 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold leading-snug pb-2 animate-text uppercase">
+			INTEGRATED MARKETING
+		</h1>
+		<p class="text-xs sm:text-sm md:text-base lg:text-lg leading-relaxed animate-text">
+			360 MARKETING CAMPAIGNS, GUERRILLA MARKETING AND EXPERIENTIAL MARKETING, SPONSORSHIP AND
+			PARTNERSHIPS
+		</p>
+		<button
+			class="outline-none focus:outline-none focus:ring-0 animate-text mt-4 px-4 py-1 border border-blue-700 text-blue uppercase bg-transparent tracking-[0.3em] text-xs sm:text-sm md:text-base">
+			Explore
+		</button>
+	</div>
+</div>
+
 
 		<!-- Image 12 -->
 		<div class="posters col-span-3 row-span-2 col-start-5 row-start-13 bg-pink-500">
