work page changes

--- a/work.html
+++ b/work.html
@@ -173,6 +173,19 @@
                 max-width: 50dvh; 
             }
         }
+        
+        @media (max-height: 600px) {
+            .bg-horse {
+                min-height: 80dvh;
+            }
+            .custom-header-text-width {
+            max-width: 70dvh;
+        }
+
+            .absolute.text-white.right-5.bottom-\[30vh\].mt-\[80px\] {
+                margin-top: 120px;
+            }
+        }
     </style>
 </head>
 
@@ -251,7 +264,7 @@
     <section class="relative w-full flex items-end justify-end bg-black bg-horse h-screen">
         <!-- Overlay with dark blue -->
 
-        <div class="absolute text-white right-5 bottom-[30vh]">
+        <div class="absolute text-white right-5 bottom-[30vh] mt-[80px]">
             <h1 class="custom-header-text-width banner-text uppercase">
                 We belive that INTELLIGENT creative THINKING helps ORGANISATIONS and INDIVIDUALS to grow
             </h1>
