--- a/work.html
+++ b/work.html
@@ -170,17 +170,18 @@
 
         @media (min-width: 440px) and (max-width: 1024px) {
             .custom-header-text-width {
-                max-width: 50dvh; 
+                max-width: 50dvh;
             }
         }
-        
+
         @media (max-height: 600px) {
             .bg-horse {
-                min-height: 80dvh;
+                min-height: 550px;
             }
+
             .custom-header-text-width {
-            max-width: 70dvh;
-        }
+                max-width: 70dvh;
+            }
 
             .absolute.text-white.right-5.bottom-\[30vh\].mt-\[80px\] {
                 margin-top: 120px;
