--- a/work.html
+++ b/work.html
@@ -156,33 +156,11 @@
             line-height: 1.75rem;
             font-weight: 500;
         }
-
-        .custom-header-text-width {
-            max-width: 40dvh;
-        }
-
-        @media (max-width: 440px) {
-            .custom-header-text-width {
-                max-width: 100%;
-                font-size: 24px;
-            }
-        }
-
-        @media (min-width: 440px) and (max-width: 1024px) {
-            .custom-header-text-width {
-                max-width: 50dvh;
-            }
-        }
-
+ 
         @media (max-height: 600px) {
             .bg-horse {
                 min-height: 550px;
-            }
-
-            .custom-header-text-width {
-                max-width: 70dvh;
-            }
-
+            } 
             .absolute.text-white.right-5.bottom-\[30vh\].mt-\[80px\] {
                 margin-top: 120px;
             }
@@ -266,8 +244,9 @@
         <!-- Overlay with dark blue -->
 
         <div class="absolute text-white right-5 bottom-[30vh] mt-[80px]">
-            <h1 class="custom-header-text-width banner-text uppercase">
-                We belive that INTELLIGENT creative THINKING helps ORGANISATIONS and INDIVIDUALS to grow
+            <h1 class=" banner-text uppercase">
+                We belive that <br /> INTELLIGENT creative<br /> THINKING helps<br /> ORGANISATIONS and
+                <br />INDIVIDUALS to grow
             </h1>
         </div>
     </section>
