--- a/aboutus.html
+++ b/aboutus.html
@@ -34,6 +34,106 @@
             opacity: 1;
             transform: translateY(0);
         }
+
+        @media (min-width: 768px) and (max-width: 1024px) {
+            .yellow-box-1 {
+                height: 40% !important;
+                margin-top: 10%;
+            }
+
+            .yellow-box {
+                height: 7% !important;
+                margin-bottom: 24% !important;
+            }
+
+            .yellow-box-2 {
+                height: 14% !important;
+            }
+
+            .section-1-text {
+                left: 13% !important;
+                width: 50% !important;
+            }
+
+            .section-1-image {
+                width: 35% !important;
+                left: 13% !important;
+            }
+
+            .green-box-1 {
+                height: 18% !important;
+                left: 18% !important;
+                top: 3% !important;
+            }
+
+            .section-2-text {
+                right: 25% !important;
+                width: 35% !important;
+                top: -10% !important;
+            }
+
+            .green-box-2 {
+                left: 0% !important;
+                height: 7% !important;
+            }
+
+            .green-box-3 {
+                bottom: 20% !important;
+                width: 7% !important;
+                height: 4% !important;
+            }
+
+            .section-2-text-1 {
+                top: 50% !important;
+                left: 20% !important;
+                width: 30% !important;
+            }
+
+            .section-2-image-1 {
+                width: 28% !important;
+                right: 10% !important;
+                top: 43% !important;
+                height: 40% !important;
+            }
+
+            .blue-box-1 {
+                height: 15% !important;
+            }
+
+            .blue-box-2 {
+                height: 5% !important;
+                right: 30% !important
+            }
+
+            .blue-box-3 {
+                height: 30% !important;
+                right: 18% !important;
+                margin-bottom: 0% !important;
+            }
+
+            .section-3-image {
+                top: 5% !important;
+                left: 15% !important;
+                width: 30% !important;
+                height: 40% !important;
+            }
+
+            .section-3-text {
+                top: 7% !important;
+                right: 0% !important;
+                width: 40% !important;
+            }
+
+            .section-3-text-1 {
+                bottom: 20% !important;
+                left: 13% !important;
+                width: 50% !important;
+            }
+
+            .custom-mt-10 {
+                margin-top: 10px;
+            }
+        }
     </style>
 </head>
 
@@ -134,17 +234,17 @@
         <div class="min-h-screen w-full relative overflow-hidden px-4 md:px-0">
             <!-- Yellow Accent Blocks - Hidden on small screens -->
             <div
-                class="hidden md:block absolute top-[20%] w-[2.5%] h-[68%] bg-[url('/about-assets/yellow-box-1.png')] slide-in">
+                class="hidden md:block absolute top-[20%] w-[2.5%] h-[68%] bg-[url('/about-assets/yellow-box-1.png')] slide-in yellow-box-1">
             </div>
             <div
-                class="block absolute top-[60%] right-0 sm:top-[35.2%] sm:right-[30.2%] w-[30%] sm:w-[12%] h-[11%] bg-[url('/about-assets/yellow-box-1.png')] slide-in">
+                class="block absolute top-[60%] right-0 sm:top-[35.2%] sm:right-[30.2%] w-[30%] sm:w-[12%] h-[11%] bg-[url('/about-assets/yellow-box-1.png')] slide-in yellow-box">
             </div>
             <div
-                class="block absolute top-[80%] right-52 sm:top-[7.2%] sm:right-[4.5%] h-[8%] w-[50%] sm:w-[11.7%] sm:h-[20.8%] bg-[url('/about-assets/yellow-box-2.png')] slide-in">
+                class="block absolute top-[80%] right-52 sm:top-[7.2%] sm:right-[4.5%] h-[8%] w-[50%] sm:w-[11.7%] sm:h-[20.8%] bg-[url('/about-assets/yellow-box-2.png')] slide-in yellow-box-2">
             </div>
 
             <!-- "WE GROW IDEAS" Section -->
-            <div class="pt-16 md:absolute md:top-[10%] md:left-[5%] md:w-[30%] w-full slide-in">
+            <div class="pt-16 md:absolute md:top-[10%] md:left-[5%] md:w-[30%] w-full slide-in section-1-text">
                 <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4">WE GROW IDEAS</h2>
                 <p class="text-gray-600 w-full md:w-[74%]">
                     Our design studio uses intelligent creative thinking to help add value to and grow our clients'
@@ -153,7 +253,8 @@
             </div>
 
             <!-- Office Image -->
-            <div class="mt-8 md:absolute md:top-[45%] md:left-[13%] md:w-[30%] md:h-[30%] w-full slide-in">
+            <div
+                class="mt-8 md:absolute md:top-[45%] md:left-[13%] md:w-[30%] md:h-[30%] w-full slide-in section-1-image">
                 <img src="/about-assets/body-image-1.png" alt="Modern office space"
                     class="w-full md:object-contain shadow-lg" />
             </div>
@@ -163,18 +264,19 @@
         <div class="min-h-screen w-full relative overflow-hidden px-4 md:px-0">
             <!-- Green Accent Blocks - Hidden on small screens -->
             <div
-                class="block absolute -top-0 right-0 h-[8%] w-[20%] sm:top-[2%] sm:left-[23.4%] sm:w-[16%] sm:h-[22%] bg-[url('/about-assets/green-box-1.png')] slide-in">
+                class="block absolute -top-0 right-0 h-[8%] w-[20%] sm:top-[2%] sm:left-[23.4%] sm:w-[16%] sm:h-[22%] bg-[url('/about-assets/green-box-1.png')] slide-in green-box-1">
             </div>
             <div
-                class="block absolute top-[90%] right-0 sm:top-[64%] sm:left-[11.8%] w-[40%] sm:w-[11.7%] h-[8%] sm:h-[12%] bg-[url('/about-assets/green-box-2.png')] slide-in">
+                class="block absolute top-[90%] right-0 sm:top-[64%] sm:left-[11.8%] w-[40%] sm:w-[11.7%] h-[8%] sm:h-[12%] bg-[url('/about-assets/green-box-2.png')] slide-in green-box-2">
             </div>
             <div
-                class="hidden md:block absolute bottom-[9.7%] right-0 w-[15%] h-[8%] bg-[url('/about-assets/green-box-3.png')] slide-in">
+                class="hidden md:block absolute bottom-[9.7%] right-0 w-[15%] h-[8%] bg-[url('/about-assets/green-box-3.png')] slide-in green-box-3">
             </div>
 
             <!-- "WE CHAMPION CLIENTS" Section -->
-            <div class="pt-16 md:absolute md:top-[4%] md:right-[32%] md:w-[25%] w-full slide-in">
-                <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4">WE CHAMPION CLIENTS.</h2>
+            <div class="pt-16 md:absolute md:top-[4%] md:right-[32%] md:w-[25%] w-full slide-in section-2-text">
+                <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4 custom-mt-10">WE CHAMPION
+                    CLIENTS.</h2>
                 <p class="text-gray-600 w-full md:w-[75%]">
                     We are lucky enough to work with gifted, dedicated and committed clients. They offer us insight into
                     their business; our job is to tell the world.
@@ -182,7 +284,8 @@
             </div>
 
             <!-- "WE COLLABORATE FEARLESSLY" Section -->
-            <div class="mt-8 md:mt-0 md:absolute md:top-[55%] md:left-[30%] md:w-[20%] w-full slide-in">
+            <div
+                class="mt-8 md:mt-0 md:absolute md:top-[55%] lg:left-[30%] md:w-[20%] w-full slide-in section-2-text-1">
                 <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4">WE COLLABORATE FEARLESSLY.
                 </h2>
                 <p class="text-gray-600">
@@ -192,7 +295,8 @@
             </div>
 
             <!-- Office Image -->
-            <div class="mt-8 md:absolute md:top-[44%] md:right-[18%] md:w-[28%] md:h-[42%] w-full slide-in">
+            <div
+                class="mt-8 md:absolute md:top-[44%] lg:right-[18%] md:w-[28%] md:h-[42%] w-full slide-in section-2-image-1">
                 <img src="/about-assets/body-image-2.png"
                     alt="Modern office space with wooden table and glass partitions"
                     class="w-full md:h-full md:object-contain" />
@@ -203,24 +307,25 @@
         <div class="min-h-screen w-full relative overflow-hidden px-4 md:px-0">
             <!-- Blue Accent Blocks - Hidden on small screens -->
             <div
-                class="block absolute top-0 left-0 sm:top-[5%] sm:left-0 w-[25%] sm:w-[2%] h-[7.8%] sm:h-[30%] bg-[url('/about-assets/blue-box-1.png')] slide-in">
+                class="block absolute top-0 left-0 sm:top-[5%] sm:left-0 w-[25%] sm:w-[2%] h-[7.8%] sm:h-[30%] bg-[url('/about-assets/blue-box-1.png')] slide-in blue-box-1">
             </div>
             <div
-                class="hidden md:block absolute top-0 right-[25%] w-[10%] h-[5%] bg-[url('/about-assets/blue-box-2.png')] slide-in">
+                class="hidden md:block absolute top-0 right-[25%] w-[10%] h-[5%] bg-[url('/about-assets/blue-box-2.png')] slide-in blue-box-2">
             </div>
             <div
-                class="block absolute bottom-10 right-0 sm:bottom-[16%] sm:right-[27%] w-[30%] sm:w-[20%] h-24 sm:h-[32%] bg-[url('/about-assets/blue-box-3.png')] slide-in">
+                class="block absolute bottom-10 right-0 sm:bottom-[16%] sm:right-[27%] w-[30%] sm:w-[20%] h-24 sm:h-[32%] bg-[url('/about-assets/blue-box-3.png')] slide-in blue-box-3">
             </div>
 
             <!-- Office Image -->
-            <div class="pt-16 md:absolute md:top-[5%] md:left-[18%] md:w-[20%] md:h-[25%] w-full slide-in">
+            <div
+                class="pt-16 md:absolute md:top-[5%] md:left-[18%] md:w-[20%] md:h-[25%] w-full slide-in section-3-image">
                 <img src="/about-assets/body-image-3.png"
                     alt="Interior office space with wooden frames and glass partitions"
                     class="w-full md:h-full md:object-cover shadow-lg" />
             </div>
 
             <!-- "WE ADD VALUE" Section -->
-            <div class="mt-8 md:absolute md:top-[15%] md:right-[20%] md:w-[25%] w-full slide-in">
+            <div class="mt-8 md:absolute md:top-[15%] md:right-[20%] md:w-[25%] w-full slide-in section-3-text">
                 <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4">WE ADD VALUE</h2>
                 <p class="text-gray-600 w-full md:w-[70%]">
                     Whatever the task, no matter whether it's big or small, we bring our experience and expertise to
@@ -229,7 +334,7 @@
             </div>
 
             <!-- "WE CRAFT SOLUTIONS" Section -->
-            <div class="mt-8 md:absolute md:bottom-[30%] md:left-[13%] md:w-[25%] w-full slide-in">
+            <div class="mt-8 md:absolute md:bottom-[30%] md:left-[13%] md:w-[25%] w-full slide-in section-3-text-1">
                 <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4">WE CRAFT SOLUTIONS.</h2>
                 <p class="text-gray-600 w-full md:w-[70%]">
                     Beautiful creative work only goes so far. To deliver something that really engages you need to add
@@ -271,10 +376,10 @@
                                 <a class="hover:text-yellow-400" href="/work.html">WORK</a>
                             </h3>
                             <ul class="space-y-1">
-                                      <li class="cursor-pointer">
+                                <li class="cursor-pointer">
                                     <a class="hover:text-yellow-400" href="/work.html?tab=flim">Film Posters</a>
                                 </li>
-                                 <li class="cursor-pointer">
+                                <li class="cursor-pointer">
                                     <a class="hover:text-yellow-400" href="/work.html?tab=branding">Branding</a>
                                 </li>
                                 <li class="cursor-pointer">
@@ -346,9 +451,9 @@
 
                         <!-- Social Icons -->
                         <div class="flex flex-wrap justify-center sm:justify-end gap-6">
-                         
 
-                             <a href="https://x.com/gopiprasannaa" target="_blank"
+
+                            <a href="https://x.com/gopiprasannaa" target="_blank"
                                 class="w-10 h-10 flex items-center justify-center border-2 border-white rounded-full text-white text-xl">
                                 <i class="fa-brands fa-x-twitter"></i>
                             </a>
